--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,24 @@
-.App {
-  text-align: center;
+body{
+  height: 100%;
+  background-color: black;
+  background : url('./images/coding.png');
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.nav-button{
+  margin-top: 5vh;
+  margin-left: 50px;
+  position: fixed;
+  z-index: 3;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.social-media-margin-left{
+  margin-left: 2vw;
 }
-
-.App-link {
-  color: #61dafb;
+a:hover{
+  color: yellow;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.warna{
+  background-color: rgba(0, 0, 0, 0.5);
+  font-size: 100px;
+}
+.transparant-color{
+  background-color: rgba(0, 0, 0, 0.5);
 }
